--- a/src/controls/Button.scss
+++ b/src/controls/Button.scss
@@ -14,3 +14,20 @@
         }
     }
 }
+
+button.btn-icon-only {
+    background-color: inherit;
+    color: #42526E;
+    height: 32px;
+    width: 32px;
+    border: none;
+    border-radius: 3px;
+
+    span {
+        font-size: 16px;
+    }
+
+    &:hover {
+        background-color: rgba(9, 30, 66, 0.08)
+    }
+}
