--- a/src/controls/Loader.scss
+++ b/src/controls/Loader.scss
@@ -6,6 +6,10 @@
     background-color: #f9fbfd;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .multi-square-spin {
@@ -14,8 +18,7 @@
     --color: currentColor;
     --animation-timing-function: linear;
     --animation-duration: 2s;
-    margin: auto;
-    margin-top: 100px;
+    margin: 100px auto 30px auto;
     width: var(--size);
     height: var(--size);
     background-image:
@@ -102,5 +105,57 @@
     100% {
         opacity: 0;
         transform: scale(1);
+    }
+}
+
+/* Progress bar related styles */
+.progress-bar {
+    position: relative;
+    width: 60%;
+    height: 10px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+.progress-bar-fill {
+    width: var(--progress);
+    height: 100%;
+    background: linear-gradient(90deg, #4facfe, #00f2fe);
+    border-radius: 5px;
+    position: relative;
+    animation: shine 2s infinite;
+}
+
+@keyframes shine {
+    0% {
+        background-position: -200px 0;
+    }
+
+    100% {
+        background-position: 200px 0;
+    }
+}
+
+.progress-bar-fill::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -50px;
+    width: 50px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    transform: skewX(-20deg);
+    animation: shimmer 2s infinite;
+}
+
+@keyframes shimmer {
+    0% {
+        transform: translateX(-100%) skewX(-20deg);
+    }
+
+    100% {
+        transform: translateX(100%) skewX(-20deg);
     }
 }
